...
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/nunito_medium"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/auth_by_sms_to_x"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="18sp"
        app:icon="@drawable/sms_24px"
        app:iconSize="24dp"
        app:iconTint="?attr/colorOnSurfaceVariant" />

...
